<resources>
    <string name="app_name">Archimedes Calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="rightBracket">)</string>
    <string name="leftBracket">(</string>
    <string name="clear">ac</string>
    <string name="remove">⌫</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>
    <string name="subtraction">-</string>
    <string name="sum">+</string>
    <string name="equality">=</string>
    <string name="dot">.</string>

    <string name="history_action">history</string>
    <string name="change_theme_action">change theme</string>
    <string name="Settings_action">settings</string>
</resources>
