<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/calcButtonPanelLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/leftBracketButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/leftBracket"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/sevenButton"
        app:layout_constraintEnd_toStartOf="@id/rightBracketButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rightBracketButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/rightBracket"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/eightButton"
        app:layout_constraintEnd_toStartOf="@id/clearButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/leftBracketButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearButton"
        style="?attr/calcSpecialButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/nineButton"
        app:layout_constraintEnd_toStartOf="@id/removeButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/rightBracketButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/removeButton"
        style="?attr/calcSpecialButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/remove"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/divisionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/clearButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sevenButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/seven"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/fourButton"
        app:layout_constraintEnd_toStartOf="@id/eightButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/leftBracketButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/eightButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/eight"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/fiveButton"
        app:layout_constraintEnd_toStartOf="@id/nineButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/sevenButton"
        app:layout_constraintTop_toBottomOf="@id/rightBracketButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nineButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nine"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/sixButton"
        app:layout_constraintEnd_toStartOf="@id/divisionButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/eightButton"
        app:layout_constraintTop_toBottomOf="@id/clearButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/divisionButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/division"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/multiplicationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/nineButton"
        app:layout_constraintTop_toBottomOf="@id/removeButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fourButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/four"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/oneButton"
        app:layout_constraintEnd_toStartOf="@id/fiveButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sevenButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fiveButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/five"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/twoButton"
        app:layout_constraintEnd_toStartOf="@id/sixButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/fourButton"
        app:layout_constraintTop_toBottomOf="@id/eightButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sixButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/six"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/threeButton"
        app:layout_constraintEnd_toStartOf="@id/multiplicationButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/fiveButton"
        app:layout_constraintTop_toBottomOf="@id/nineButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/multiplicationButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/multiplication"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/subtractionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/sixButton"
        app:layout_constraintTop_toBottomOf="@id/divisionButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/oneButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/one"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/zeroButton"
        app:layout_constraintEnd_toStartOf="@id/twoButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fourButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/twoButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/two"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/dotButton"
        app:layout_constraintEnd_toStartOf="@id/threeButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/oneButton"
        app:layout_constraintTop_toBottomOf="@id/fiveButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/threeButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/three"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/equalityButton"
        app:layout_constraintEnd_toStartOf="@id/subtractionButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/twoButton"
        app:layout_constraintTop_toBottomOf="@id/sixButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/subtractionButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/subtraction"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/sumButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/threeButton"
        app:layout_constraintTop_toBottomOf="@id/multiplicationButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/zeroButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/zero"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dotButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oneButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dotButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dot"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/equalityButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/zeroButton"
        app:layout_constraintTop_toBottomOf="@id/twoButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/equalityButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equality"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sumButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/dotButton"
        app:layout_constraintTop_toBottomOf="@id/threeButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sumButton"
        style="?attr/calcButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sum"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/equalityButton"
        app:layout_constraintTop_toBottomOf="@id/subtractionButton"
        app:layout_constraintVertical_chainStyle="packed" />


</androidx.constraintlayout.widget.ConstraintLayout>